move js and css to own folders

--- a/readme-template.html
+++ b/readme-template.html
@@ -11,11 +11,11 @@
 <link href="help/dark/" rel="catalog" type="dark" />
 
 <!-- Your CSS styles. -->
-<link href="help/markdown.css" rel="stylesheet" />
+<link href="help/css/markdown.css" rel="stylesheet" />
 
 <!-- Working scripts. Do not change! -->
-<script src="help/showdown.min.js"></script>
-<script src="help/md2html.js"></script>
+<script src="help/js/showdown.min.js"></script>
+<script src="help/js/md2html.js"></script>
 
 <body>
     <!-- This is floating link to top of page -->
