--- a/help/uTerminal-help-template.html
+++ b/help/uTerminal-help-template.html
@@ -11,11 +11,11 @@
 <link href="dark/" rel="catalog" type="dark" />
 
 <!-- Your CSS styles. -->
-<link href="markdown.css" rel="stylesheet" />
+<link href="css/markdown.css" rel="stylesheet" />
 
 <!-- Working scripts. Do not change! -->
-<script src="showdown.min.js"></script>
-<script src="md2html.js"></script>
+<script src="js/showdown.min.js"></script>
+<script src="js/md2html.js"></script>
 
 <body>
     <!-- This is floating link to top of page -->
